# TimeSeries-Portfolio

./: .pre-commit-config.yaml  LICENSE  README.md  config.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  streamlit_app.py
.github/workflows/: ci.yml
data/processed/: BND_enhanced_data.csv  SPY_enhanced_data.csv  TSLA_enhanced_data.csv  backtesting_report.md  backtesting_results.pkl  backtesting_summary.csv  future_forecast_analysis.pkl  future_forecast_summary.csv  model_predictions.csv  risk_metrics_summary.csv
notebooks/: 01_preprocessing_eda.ipynb  02_forecasting_models.ipynb  03_future_forecast_analysis.ipynb  04_portfolio_optimization.ipynb  05_backtesting.ipynb
reports/: summary_report.md
src/: __init__.py  arima_model.py  backtesting.py  base.py  config.py  dashboard.py  data_loader.py  eda.py  exceptions.py  explainability.py  forecasting.py  logging_config.py  lstm_model.h5  lstm_model.py  lstm_scaler.pkl  portfolio_analytics.py  portfolio_optimization.py  preprocessing.py  real_time_data.py  risk_management.py  validation.py
tests/: __init__.py  conftest.py  test_base.py  test_config.py
